# Image-CoCreation

./: LICENSE  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: extract_features.py
backend/app/core/: config.py
backend/app/db/: supabase.py
backend/app/schemas/: schemas.py
backend/app/services/: dimentionality.py  feature_extractor.py  s3_service.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/components/: drag-drop-files.tsx  drag-drop.tsx  lasso.tsx  login-form.tsx  side-bar.tsx  sign-up-form.tsx  title.tsx  upload-to-s3.tsx
frontend/components/motion-primitives/: dock.tsx
frontend/src/app/: fonts.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/api/onboarding/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/auth/confirm/: route.ts
frontend/src/app/auth/sign-up/: page.tsx
frontend/src/app/components/: drag-drop.tsx  side-bar.tsx  title.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/onboarding-check/: page.tsx
frontend/styles/: fonts.ts
